--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
+    "angular-mentions": "^1.5.0",
     "firebase": "^10.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
